separate youtube bookmark logic to a module, fix add bookmark not showing up sometimes

--- a/src/pages/Popup/Popup.css
+++ b/src/pages/Popup/Popup.css
@@ -57,4 +57,8 @@
   transition: all 0.3s ease;
   width: 20px;
   height: 20px;
+
+  &:active {
+    transform: translateY(4px);
+  }
 }
